# zero-knowledge-proof-work

./: README.md
bulletproof/: README.md
bulletproof/bulletproof/: README.md  basic.cpp  basic.h  bullet.cpp  bullet.h  prover.cpp  verify.cpp
bulletproof/rust_proof/: Cargo.toml  README.md
bulletproof/rust_proof/conf/: config.toml  hex_file.txt
bulletproof/rust_proof/data/: bf_prover_to_bf_verifier.txt  bf_prover_to_ip_prover.txt  bf_verifier_to_ip_verifier.txt  ip_prover_to_ip_verifier.txt  keys_hex_file.txt  pass_to_ip_prover.txt  vecs_to_ip_verifier.txt
bulletproof/rust_proof/src/: bullet_proof_key_generation.rs  bullet_proof_prover.rs  bullet_proof_verifier.rs  bulletproof.rs  inner_product_argu.rs  inner_product_prover.rs  inner_product_verifier.rs  lib.rs  main_bullet_proof_key_generation.rs  main_bullet_proof_prover.rs  main_bullet_proof_verifier.rs  main_inner_product_prover.rs  main_inner_product_verifier.rs  main_test.rs  utils.rs
bulletproof/rust_proof/tests/: test_base_prover.rs
fnizk/: README.md
fnizk/python_fnizk/: cp-fnizk.py  fnizk.py  verifier.py
fnizk/rust_fnizk/: Cargo.toml  run.sh
fnizk/rust_fnizk/conf/: config.toml
fnizk/rust_fnizk/data/: fnizk_keys.txt  fnizk_prover_to_fnizk_verifier.txt  fnizk_prover_to_ip_prover_0  fnizk_prover_to_ip_prover_1  fnizk_prover_to_ip_prover_2  fnizk_secret_keys.txt  fnizk_verifier_to_ip_verifier.txt  ip_prover_to_ip_verifier_0  ip_prover_to_ip_verifier_1  ip_prover_to_ip_verifier_2
fnizk/rust_fnizk/src/: fnizk_key_generation.rs  fnizk_prover.rs  fnizk_verifier.rs  inner_product_prover.rs  inner_product_verifier.rs  lib.rs  main_fnizk_key_generation.rs  main_fnizk_prover.rs  main_fnizk_verifier.rs  main_inner_product_prover.rs  main_inner_product_verifier.rs  utils.rs
fsmp/: README.md
fsmp/go_fsmp/: '  README.md  SME.go  fSMP  fSMP.go  fSMP_prover  fSMP_prover.go  fSMP_verifier  go.mod  (+14 more)
fsmp/rust_fsmp/: Cargo.toml
fsmp/rust_fsmp/src/: ark_test.rs
(+65 files in other folders)
